# panther_ws

./: .gitignore  Dockerfile  README.md  compose.yaml
demos/cezeaux_panther/: compose.yaml
demos/cezeaux_panther/config/robot/: base.yaml  devices.yaml
demos/cezeaux_panther/config/robot/devices/: xsens.imu.yaml
demos/simu_panther/: compose.yaml
demos/simu_panther/config/: simulation.yaml  wgs84_anchor.yaml
demos/simu_panther/config/paths/: cours.traj  recorded_farm.traj
demos/simu_panther/config/robot/: devices.yaml  path_following.yaml  teleop.yaml
docker/: cyclonedds_localhost.xml  repositories
src/path_following_with_remap/: package.xml  setup.cfg  setup.py
src/path_following_with_remap/launch/: path_following_with_remap.launch.py
src/path_following_with_remap/path_following_with_remap/: preprocess.py
