<?xml version="1.0"?>
<package format="3">
  <name>path_following_with_remap</name>
  <version>0.1.0</version>
  <description>Wrapper launch package to add cmd_vel remapping to romea_path_following.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>tirrex_demo</exec_depend>
  <exec_depend>romea_path_following</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>romea_path_tools</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>